--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <section class="main-card">
+    <div class="picture-part">
+      <img src="/NFT-Card/images/image-equilibrium.jpg" alt="" class="picture-card">
+    </div>
+    <div class="text-part">
+      <h2>Equilibrium #3429</h2>
+      <h3>Our Equilibrium collection promotes balance and calm.</h3>
+      <div class="mid-part">
+        <div class="infos">
+          <img src="images/icon-ethereum.svg" alt="ETH" class="icon"><span class="text-price">0.041 ETH</span>
+        </div>
+        <div class="infos">
+          <img src="images/icon-clock.svg" alt="clock" class="icon"><span>3 days left</span>
+        </div>
+      </div>
+      <hr class="line">
+      <div class="creator">
+        <img src="/NFT-Card/images/image-avatar.png" alt="" class="img-creator"> <p class="creator-text">Creation of <span class="creator-name">Jules Wyvern</span></p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
