Add image hover effect

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <section class="main-card">
     <div class="picture-part">
       <img src="/NFT-Card/images/image-equilibrium.jpg" alt="" class="picture-card">
+      <div class="overlay"></div>
+      <img src="/NFT-Card/images/icon-view.svg" alt="" class="picture-view">
     </div>
     <div class="text-part">
       <h2>Equilibrium #3429</h2>
